[package]
name = "swh-test"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "swh-test"
path = "src/main.rs"

[[bin]]
name = "swh-server"
path = "src/main_server.rs"

[features]
deprecated-binaries = []  # build old, deprecated binaries
 # Specify custom path


[dependencies]
chrono = "0.4.42"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
bincode = "1.3"
swh-graph = { version = "8.0.10", features = ["serde"] }
swh-graph-stdlib = "8.0.10"
indicatif = "0.17"
rayon = "1.10"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }

